[tool.poetry]
name = "openai-swarm-examples"
version = "0.1.0"
description = ""
authors = ["Christopher Lillthors <christopher@lillthors.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
swarm = {git = "ssh://git@github.com/openai/swarm.git"}
pyowm = "^3.3.0"
setuptools = "^75.1.0"
slack-sdk = "^3.33.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
